--- a/build
+++ b/build
@@ -738,7 +738,7 @@ esac
 EXPECTED_SIZE=$(echo $EXPECTED_SIZE |cut -d. -f1)
 echo "Expected size in bytes: $EXPECTED_SIZE"
 # Add some space for filesystem overhead, files copied/created by %post scripts etc.
-PADDED_EXPECTED_SIZE=$(echo $EXPECTED_SIZE '*' 2.3 '+' 128 '*' 1024 '*' 1024 |bc -l |cut -d. -f1)
+PADDED_EXPECTED_SIZE=$(echo $EXPECTED_SIZE '*' 1.4 '+' 256 '*' 1024 '*' 1024 |bc -l |cut -d. -f1)
 echo "Padded size in bytes: $PADDED_EXPECTED_SIZE"
 
 # setup-partitions is the first per-device script that can touch results.
@@ -804,7 +804,8 @@ if ! $NATIVEBUILD; then
 	cp /usr/bin/qemu-$QEMUARCH-static $OURDIR/$ROOTDIR/usr/bin/
 fi
 
-if ! dnf5 -y install --nogpgcheck --installroot=$OURDIR/$ROOTDIR --releasever=$OMV_VERSION --forcearch=$ARCH $WEAKDEPS $PACKAGES $KERNELRPM; then
+# Make sure the downloads and caches go outside of the disk image so it doesn't grow to insane sizes
+if ! dnf5 -y install --setopt=cachedir=/tmp/dnf-host-cache --setopt=system_cachedir=/tmp/dnf-host-cache --setopt=keepcache=False --nogpgcheck --installroot=$OURDIR/$ROOTDIR --releasever=$OMV_VERSION --forcearch=$ARCH $WEAKDEPS $PACKAGES $KERNELRPM; then
 	if [ -e $OURDIR/$ROOTDIR/bin/sh ]; then
 		cat >&2 <<EOF
 WARNING: dnf returned an error code, but it looks like installation finished.
@@ -948,7 +949,7 @@ if [ "$NEED_INITRD" != "no" ] || [ "$USE_UEFI" = "yes" ] || [ "$USE_SYSTEMD_UEFI
 		echo "Creating ESP for GRUB."
 		mkdir -p $OURDIR/$ROOTDIR/boot/efi/EFI/BOOT
 		if echo $PACKAGESETS |grep -q gui; then
-			chroot "$OURDIR/$ROOTDIR" /usr/bin/grub2-mkimage -o /boot/efi/EFI/BOOT/$BOOTEFI -O $EFIARCH -d /usr/lib/grub/$EFIARCH -p /EFI/BOOT fat part_gpt part_msdos normal boot linux configfile loopback chain efifwsetup efi_gop ls search search_label search_fs_uuid search_fs_file gfxterm gfxterm_background gfxterm_menu gfxmenu test all_video loadenv exfat ext2 part_msdos part_gpt loadenv ls chain btrfs xfs ntfs all_video efifwsetup efinet font probe video loopback gzio xzio zstd
+			chroot "$OURDIR/$ROOTDIR" /usr/bin/grub2-mkimage -o /boot/efi/EFI/BOOT/$BOOTEFI -O $EFIARCH -d /usr/lib/grub/$EFIARCH -p /EFI/BOOT fat part_gpt part_msdos normal boot linux configfile loopback chain efifwsetup efi_gop ls search search_label search_fs_uuid search_fs_file gfxterm gfxterm_background gfxmenu test all_video loadenv exfat ext2 part_msdos part_gpt loadenv ls chain btrfs xfs ntfs all_video efifwsetup efinet font probe video loopback gzio xzio zstd
 		else
 			chroot "$OURDIR/$ROOTDIR" /usr/bin/grub2-mkimage -o /boot/efi/EFI/BOOT/$BOOTEFI -O $EFIARCH -d /usr/lib/grub/$EFIARCH -p /EFI/BOOT fat part_gpt part_msdos normal boot linux configfile loopback chain efifwsetup efi_gop ls search search_label search_fs_uuid search_fs_file test loadenv exfat ext2 part_msdos part_gpt loadenv ls chain btrfs xfs ntfs all_video efifwsetup efinet font probe loopback gzio xzio zstd
 		fi
